# KfIDE

./: CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
include/: gb.h  kf.h  stb_truetype.h
src/: font.c  highlevel_io.c  io_util.c  kf.c  math.c  mem.c  str_util.c  strings.c  text.c  time.c  translation.c  ui.c
src/platform/: platform_apple.c  platform_macos.c  platform_unix.c  platform_win32.c
